--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "aws-sdk": "^2.869.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemon": "^2.0.7"
   }
 }
